<resources>
    <string name="app_name">SparkChat</string>
    <string name="full_app_name">SparkChat Messenger</string>
    <string name="sign_in">Sign in</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number_with_country_code">Enter your Phone number with country code</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="bullet_sign">\u2022</string>
    <string name="refresh">Refresh</string>
    <string name="contacts">Contacts</string>
    <string name="terms_and_conditions_applied">Terms And Conditions applied</string>
</resources>