<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activities.LoginActivity">
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/normal_text"
            android:text="@string/app_name"
            android:textSize="35dp"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/fadeTextColor"
            android:text="@string/full_app_name"
            android:textSize="15dp"
            android:fontFamily="@font/sf_pro"
            />
        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_chat_24"
            android:background="@android:color/transparent"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/normal_text"
            android:text="@string/sign_in"
            android:textSize="20dp"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/fadeTextColor"
            android:text="@string/enter_your_phone_number_with_country_code"
            android:textSize="12dp"
            android:fontFamily="@font/sf_pro"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/activity_login_countryCode"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:maxLines="1"
                android:ems="4"
                android:text="+91"
                android:inputType="number"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/normal_text"
                android:fontFamily="@font/sf_pro"
                android:textSize="20dp"
                android:background="@drawable/round_grey_stroke_cylinder"
                />
            <EditText
                android:id="@+id/activity_login_phoneNumber"
                android:ems="10"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:textColor="@color/normal_text"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:fontFamily="@font/sf_pro"
                android:textSize="20dp"
                android:background="@drawable/round_grey_stroke_cylinder"
                />
            </LinearLayout>
        <LinearLayout
            android:id="@+id/activity_login_otpLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fadeTextColor"
                android:text="Enter your OTP to confirm phone number"
                android:textSize="12dp"
                android:fontFamily="@font/sf_pro"
                />
            <EditText
                android:id="@+id/activity_login_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:textColor="@color/normal_text"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:fontFamily="@font/sf_pro"
                android:textSize="20dp"
                android:background="@drawable/round_grey_stroke_cylinder"
                />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_login_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:layout_marginEnd="20dp"
            android:textColor="@color/reverse_normal_text"
            android:text="@string/get_otp"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorAccent"
            />
        <TextView
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/fadeTextColor"
            android:layout_margin="15dp"
            android:text="@string/terms_and_conditions_applied"
            android:textSize="12dp"
            android:fontFamily="@font/sf_pro"
            />
    </LinearLayout>

</RelativeLayout>