<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="activityMainAdapter"
            type="com.mu.jan.sparkchat.ui.adapters.RvAdapter" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:id="@+id/activity_main_appBarLayout"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                app:titleEnabled="false"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/normal_text"
                        android:textSize="38dp"
                        android:textStyle="bold"
                        android:text="@string/chats"
                        />
                    <ImageView
                        android:id="@+id/activity_main_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:src="@drawable/ic_baseline_settings_24"
                        />
                </RelativeLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
            <LinearLayout
                android:id="@+id/activity_main_activity_main_searchLayout"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:padding="3dp"
                android:focusableInTouchMode="true"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/search_view_back"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_baseline_search_24"
                    android:layout_gravity="center_vertical"
                    />
                <EditText
                    android:id="@+id/activity_main_searchEditText"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/normal_text"
                    android:maxLines="1"
                    android:textSize="15dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:textColorHint="@android:color/darker_gray"
                    android:fontFamily="@font/sf_pro"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/activity_main_searchEditText_cancel"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/round_grey_cancel"
                    />
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:id="@+id/activity_main_scrollView"
            android:layout_width="match_parent"
            android:nestedScrollingEnabled="true"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        android:adapter="@{activityMainAdapter}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:descendantFocusability="blocksDescendants"
                        android:layout_marginBottom="?actionBarSize"
                        />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mySecondaryColor"
                />
            <LinearLayout
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/activity_main_chatsBtn"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_baseline_supervisor_account_24"
                    android:gravity="center"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:fontFamily="@font/sf_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts"
                    android:gravity="center"
                    android:textSize="11dp"
                    android:textColor="@color/fadeTextColor"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
